Imagenes a la derecha

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
        });
     </script>
     {% endif %}
-
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/default-style.css">
 </head>
 <body>
 {% include topnav.html %}
