--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -9,6 +9,9 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="fa fa-home fa-lg navbar-brand" href="index.html">&nbsp;<span class="projectTitle"> {{site.topnav_title}}</span></a>
+        <div>
+            <img class="Asomao" src="images/ASOMAO_sin_fondo.png">
+        </div>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
