--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -289,6 +289,11 @@ li.dropdownActive a {
     margin-top:10px;
 }
 
+.dropdown-box {
+    position: absolute;
+    right: 60px;
+}
+
 .Asomao {
     height: 50px;
     width: 50px;
